# student-key-manager

./: Cargo.toml  LICENSE-MIT  README.md
demo_migration/: 0001_dummy_migration.sql
src/: database.rs  encryption.rs  errors.rs  key_management.rs  lib.rs  models.rs
tests/: database_tests.rs  integration_tests.rs  test_schema.sql
