[package]
name = "student-key-manager"
version = "0.1.0"
edition = "2021"
authors = ["intrepidt"]
description = "Secure key management for student data anonymization with encryption and database integration"
readme = "README.md"
homepage = "https://github.com/intrepidt/student-key-manager"
repository = "https://github.com/intrepidt/student-key-manager"
license = "MIT OR Apache-2.0"
keywords = ["education", "privacy", "encryption", "anonymization", "security"]
categories = ["cryptography", "database"]
exclude = [
    "tests/*",
    ".gitignore",
    ".github/*",
]

[dependencies]
# Core crypto dependencies
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Encoding and serialization
base64 = "0.21"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"

# Database support (optional)
sqlx = { version = "0.7", features = ["postgres", "chrono", "runtime-tokio-native-tls"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = ["database"]
database = ["sqlx", "tokio"]
standalone = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
env_logger = "0.10"
anyhow = "1.0"
